Réimplémentation de l'ajout et de la modification d'une Unité Admin

--- a/src/main/resources/templates/agent/frm/frm-agent.html
+++ b/src/main/resources/templates/agent/frm/frm-agent.html
@@ -63,7 +63,7 @@
                 <th:block th:replace="agent/frm/confirmation-modal-frag.html::confirmation-modal-frag"></th:block>
                 <button class="btn btn-success mr-3" id="btn-modal-trigger" type="button" data-toggle="modal" href="#confirmation-modal">Valider</button>
                 <button class="btn btn-lg btn-success mr-3" id="btn-valider" type="button">Enregistrer</button>
-                <button class="btn btn-lg btn-warning mr-3" id="btn-reset" type="reset">Reset</button>
+                <button class="btn btn-lg btn-warning mr-3" id="btn-reset" type="reset">Reinitialiser</button>
                 <button type="submit" id="btn-submit" class="btn btn-success btn-lg">Save</button>
             </form>
         </div>
