--- a/src/main/resources/templates/unite-admin/frm/frm-confirmation-unite-admin.html
+++ b/src/main/resources/templates/unite-admin/frm/frm-confirmation-unite-admin.html
@@ -67,29 +67,8 @@
 
 <body>
     <div layout:fragment="content">
-        <div class="container-fluid">
-        	<div class="col col-lg-12">
-	        	<div class="panel orange-panel">
-	        		<div class="panel-heading">
-                        Enregistrer une nouvelle nomination
-                    	<img th:if="${nomination.agentNomme}" style="height: 3%; width: 3%;" th:title="${nomination.agentNomme}" th:src="@{'/staffadmin/agents/'+ ${nomination.agentNomme.idAgent}+'/photo'}" class="img-circle pull-right" height="80" width="80">
-                    </div>
-	        		<div class="panel-body">
-	        			<th:block th:replace="nomination-promotion/frm-nomination-frag.html::frm-nomination-frag"></th:block>
-	        		</div>
-	        	</div>
-	        </div>
-        	
-        	<div class="col col-lg-6">
-	        	<div class="panel panel-primary">
-	        		<div class="panel-heading">Enregistrer une nouvelle promotion</div>
-	        		<div class="panel-body">
-	<!--         			<th:block th:replace="nomination-promotion/frm-nomination-frag.html::frm-nomination-frag"></th:block> -->
-	        		</div>
-	        	</div>  
-	        </div>      	
-            
-            
+    	<div class="col-md-12">
+        	<th:block th:replace="unite-admin/frm/frm-confirmation-unite-admin-frag.html::frm-confirmation-unite-admin-frag"></th:block>
         </div>
     </div>
     <div layout:fragment="js-specifics-dependancies">
@@ -100,22 +79,68 @@
 		<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
         <script src="/staffadmin/js/unite-admin/unite-admin.js"></script>
         <script>
+            $("#matricule").blur(function(e)
+            {
+            	alert("BLUR " + this.value);
+                $.ajax
+                ({
+                    type: "GET",
+                    url: "http://localhost:8081/staffadmin/exists/matricule/"+this.value,
+                    success: function (response) 
+                    {
+                        alert($("#matricule").val());
+                        if(response==true)
+                        {
+                        	$("#btnEnregistrer").removeAttr("disabled");
+                            $.ajax({
+                                type: "GET",
+                                url: "/staffadmin/agentRestController/findByMatricule/" + $("#matricule").val(),
+
+                                success: function (response) 
+                                {
+                                    alert($("#matricule").val());
+                                    alert(response["nom"]);
+                                    console.log(response);
+                                    $("#agentInfos").text(response.nom);
+                                },
+                                error: function(e)
+                                {
+                                    console.log(e);
+                                    alert("ERROR 2");
+                                }
+                            });
+                        }
+                        else
+                        {
+                            //alert("INEXISTANT");
+                            $("#btnEnregistrer").attr("disabled", "disabled")
+                        }
+                    },
+                    error: function(e)
+                    {
+                        console.log(e);
+                    	alert("ERROR "+ e);
+                    	$("#btnEnregistrer").attr("disabled", "disabled");
+                    }
+                });
+            });
 
 
+/*
             $("#idFonction").change(function (e) 
             { 
                 var idFonction = this.value;
                 $.ajax(
                 {
                     type: "GET",
-                    url: "http://localhost:8081/staffadmin/rest/uniteAdmins/findBy-TypeUniteAdmin-IdFonction/"+idFonction,
+                    url: "http://localhost:8081/staffadmin/saf/frm-nomination/ajax/onFonctionDeNominationChange/"+idFonction,
                     success: function (response) 
                     {
                         $("#idUniteAdminDeNomination").children('option').remove();
                         $('#idUniteAdminDeNomination').append($("<option value='0'></option>"));
-                        $("#idUniteAdminDeNomination-label").text(response[0].typeUniteAdmin.nomTypeUniteAdmin);
                         $.each(response, function(key, value) 
                         {
+                            //alert(value["sigle"]);
                             $('#idUniteAdminDeNomination')
                                 .append($("<option></option>")
                                 .attr("value",value["idUniteAdmin"])
@@ -135,7 +160,7 @@
             {
             	$('#idFonction').select2();
             });            
-            
+            */
         </script>
     </div>
 </body>
