--- a/src/main/resources/templates/unite-admin/frm/frm-update-unite-admin.html
+++ b/src/main/resources/templates/unite-admin/frm/frm-update-unite-admin.html
@@ -81,17 +81,12 @@
 
 				<th:block th:if="${uniteAdmin}">
 					<div class="panel panel-default">
-					
-						<div class="panel-heading" > Modification d'un(e) <span th:text="${uniteAdmin.typeUniteAdmin.nomTypeUniteAdmin}"></span></div>
+						<div class="panel-heading" > Modification d'une unité administrative</div>
 						<div class="panel-body">
-							
-							<form id="unite-admin-updateForm" th:action="@{/staffadmin/unites-admins/update}" th:object="${uniteAdmin}" method="post">
+							<form id="unite-admin-newForm" th:action="@{/staffadmin/frm-unite-admin/confirmation}" th:object="${uniteAdmin}" method="post">
 								<input type="hidden" th:field="*{idUniteAdmin}"/>
-								<th:block th:replace="unite-admin/frm-unite-admin-frag.html::input-frm-unite-admin-frag"></th:block>
-									
-								<button type="button" id="btn-submit-update" class="btn btn-lg btn-warning pull-right">Enregistrer les modifications</button>
-									
-								<th:block th:replace="unite-admin/frm-unite-submit-confirmation-dialog.html::frm-unite-submit-confirmation-dialog"></th:block>
+								<input type="hidden" name="mode" value="update"/>
+								<th:block th:replace="unite-admin/frm/frm-unite-admin-frag.html::frm-unite-admin-frag"></th:block>
 							</form>
 						</div>
 					</div>
