--- a/src/main/resources/templates/unite-admin/unite-admin.html
+++ b/src/main/resources/templates/unite-admin/unite-admin.html
@@ -69,7 +69,7 @@
 <body>
     <div layout:fragment="content">
         <div class="container-fluid">
-            <th:block th:replace="unite-admin/frm-unite-admin-frag.html::frm-unite-admin-frag"></th:block>
+<!--             <th:block th:replace="unite-admin/frm-unite-admin-frag.html::frm-unite-admin-frag"></th:block> -->
 
 			<th:bloc th:replace="unite-admin/cabinet-frag.html::cabinet-frag"></th:bloc>
             <th:bloc th:replace="unite-admin/list-services-rattaches-frag.html::list-services-rattaches-frag"></th:bloc>
