--- a/src/main/resources/templates/user/summary-card-frag.html
+++ b/src/main/resources/templates/user/summary-card-frag.html
@@ -49,7 +49,7 @@
 					<p>
 						<a th:href="@{'/staffadmin/frm-agent?idAgent=' + ${visitedUser.agent.idAgent}}" class="btn btn-theme" ><i class="fa fa-edit"></i> Modifier</a>
 						<a th:href="@{'/staffadmin/affectations/'+${visitedUser.agent.idAgent}}" class="btn btn-theme"><i class="glyphicon glyphicon-send"></i> Affecter</a>
-						<a th:href="@{/staffadmin/nominations/form(idAgent=${visitedUser.agent.idAgent})}" class="btn btn-theme"><i class="fa fa-bullhorn"></i> Nommer à un post</a>
+						<a th:href="@{/staffadmin/nominations/form(idAgent=${visitedUser.agent.idAgent})}" class="btn btn-theme"><i class="fa fa-bullhorn"></i> Nomination</a>
 					</p>
 				</div>				
 				<!-- /col-md-4 -->
