--- a/src/main/resources/templates/agent/frm/confirmation-modal-frag.html
+++ b/src/main/resources/templates/agent/frm/confirmation-modal-frag.html
@@ -105,7 +105,7 @@
 							
 						</div>
 						<div class="modal-footer">
-							<button type="button" class="btn btn-lg btn-default" data-dismiss="modal">Close</button>
+							<button type="button" class="btn btn-lg btn-default" data-dismiss="modal">Annuler</button>
 							<button type="submit" id="btn-submit-modal" class="btn btn-lg btn-success">Confirmer</button>
 						</div>
 					</div>
